src/test/ui/type-alias-impl-trait/generic_duplicate_lifetime_param.stderr
error: non-defining opaque type use in defining scope
  --> $DIR/generic_duplicate_lifetime_param.rs:9:5
   |
LL |     t
   |     ^
   |
note: lifetime used multiple times
  --> $DIR/generic_duplicate_lifetime_param.rs:5:10
   |
LL | type Two<'a, 'b> = impl std::fmt::Debug;
   |          ^^  ^^

error: unconstrained opaque type
  --> $DIR/generic_duplicate_lifetime_param.rs:5:20
   |
LL | type Two<'a, 'b> = impl std::fmt::Debug;
   |                    ^^^^^^^^^^^^^^^^^^^^
   |
   = note: `Two` must be used in combination with a concrete type within the same module

error: aborting due to 2 previous errors

